--- a/css/staff.css
+++ b/css/staff.css
@@ -98,3 +98,54 @@ h2 {
 footer {
 	margin-top: 0;
 }
+
+
+.vote {
+	flex: 1 0 auto;
+}
+
+.vote-btn {
+	background-color: rgb(255,255,255);
+	border: 2px solid #595a5b;
+	padding: 20px 40px;
+	outline: none;
+	cursor: pointer;
+	transition-duration: 0.4s;
+	text-transform: uppercase;
+}
+
+.vote-btn:hover {
+	background-color: #595a5b;
+	color: white;
+}
+
+.vote-container {
+	display: flex;
+	flex-wrap: wrap;
+	margin: 25px auto 0 auto;
+	max-width: 1100px;
+	justify-content: space-around;
+	border-top: 1px solid;
+}
+
+.vote-section {
+	text-align: center;
+	max-width: 900px;
+	margin: 0 auto;
+}
+
+.split,
+.vote {
+	padding: 5px;
+	margin: 10px;
+}
+
+.split {
+	flex-basis: 250px;
+}
+
+.vote {
+	flex-basis: 210px;
+}
+
+/* Media Queries */
