--- a/css/home.css
+++ b/css/home.css
@@ -2,7 +2,7 @@
 header {
 	min-height: 100vh;
 	background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.55) 70%, rgba(66, 134, 244, 0.45) 99%),
-	url("https://images.alphacoders.com/243/thumb-1920-243341.png") no-repeat center center;
+	url("../img/bg2.png") no-repeat center center;
 	background-size: cover;
 }
 
